--- a/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
@@ -6,10 +6,11 @@
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:XF_FoodApp.ViewModels"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Title="Explore restaurants">
 
     <ContentPage.BindingContext>
-        <vm:DiscoverViewModel />
+        <vm:MainViewModel />
     </ContentPage.BindingContext>
 
 
