--- a/XF_FoodApp/XF_FoodApp/Styles/Texts.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Texts.xaml
@@ -87,13 +87,25 @@
         <Setter Property="FontSize" Value="{StaticResource TxtSizeH4_34}" />
         <Setter Property="FontFamily" Value="{StaticResource RegularFont_ProductSans}" />
     </Style>
-
+    
+    <Style x:Key="TxtHeadline5_1" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource colSec}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeH5_24}" />
+        <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
+    </Style>
+    
     <Style x:Key="TxtHeadline6_1" TargetType="Label">
         <Setter Property="TextColor" Value="{DynamicResource colSec}" />
         <Setter Property="FontSize" Value="{StaticResource TxtSizeH6_20}" />
         <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
     </Style>
 
+    <Style x:Key="TxtHeadline6_2" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource colQui}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeH6_20}" />
+        <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
+    </Style>
+    
     <Style x:Key="TxtTitle_1" TargetType="Label">
         <Setter Property="TextColor" Value="{DynamicResource colSec}" />
         <Setter Property="FontSize" Value="{StaticResource TxtSizeTit_18}" />
@@ -124,6 +136,12 @@
         <Setter Property="FontFamily" Value="{StaticResource RegularFont_ProductSans}" />
     </Style>
 
+    <Style x:Key="TxtTitle_6" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource colPrim}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeTit_18}" />
+        <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
+    </Style>
+    
     <Style x:Key="TxtEntTitle_2" TargetType="Entry">
         <Setter Property="TextColor" Value="{DynamicResource colTer}" />
         <Setter Property="FontSize" Value="{StaticResource TxtSizeTit_18}" />
@@ -174,6 +192,13 @@
         <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
     </Style>
 
+    <Style x:Key="Button_7" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource colQua}" />
+        <!--<Setter Property="BackgroundColor" Value="{DynamicResource colPrim}" />-->
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeCap_12}" />
+        <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
+    </Style>
+    
     <Style x:Key="TxtRem_1" TargetType="Label">
         <Setter Property="TextColor" Value="{DynamicResource colRemPrim}" />
         <Setter Property="FontSize" Value="{StaticResource TxtSizeTit_18}" />
@@ -215,7 +240,19 @@
         <Setter Property="FontSize" Value="{StaticResource TxtSizeSubTit1_16}" />
         <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
     </Style>
+    
+    <Style x:Key="TxtSubTit1_6" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource colQui}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeSubTit1_16}" />
+        <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
+    </Style>
 
+    <Style x:Key="TxtSubTit1_7" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource colPrim}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeSubTit1_16}" />
+        <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
+    </Style>
+    
     <Style x:Key="TxtSubTit2_1" TargetType="Label">
         <Setter Property="TextColor" Value="{DynamicResource colTer}" />
         <Setter Property="FontSize" Value="{StaticResource TxtSizeSubTit2_14}" />
@@ -240,6 +277,12 @@
         <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
     </Style>
 
+    <Style x:Key="TxtSubTit2_5" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource colTer}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeSubTit2_14}" />
+        <Setter Property="FontFamily" Value="{StaticResource BoldFont_ProductSans}" />
+    </Style>
+    
     <Style x:Key="TxtBody2_1" TargetType="Label">
         <Setter Property="TextColor" Value="{DynamicResource colAltQua}" />
         <Setter Property="FontSize" Value="{StaticResource TxtSizeBod2_14}" />
