--- a/XF_FoodApp/XF_FoodApp/Styles/General.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/General.xaml
@@ -12,6 +12,7 @@
         <ResourceDictionary Source="Texts.xaml" />
         <ResourceDictionary Source="Icons.xaml" />
         <ResourceDictionary Source="Spaces.xaml" />
+        <!--<ResourceDictionary Source="ShellStyle.xaml"/>-->
     </ResourceDictionary.MergedDictionaries>
 
 
