--- a/XF_FoodApp/XF_FoodApp/Views/ShellTemplates/FlyoutMenuItemTemplate.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/ShellTemplates/FlyoutMenuItemTemplate.xaml
@@ -1,11 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<StackLayout xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             Spacing="60"
-             x:Class="XF_FoodApp.Views.ShellTemplates.FlyoutMenuItemTemplate">
- 
-    
-</StackLayout>
+<Grid
+    x:Class="XF_FoodApp.Views.ShellTemplates.FlyoutMenuItemTemplate"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
+
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="0.2*" />
+        <ColumnDefinition Width="0.8*" />
+    </Grid.ColumnDefinitions>
+    <Image
+        Margin="5"
+        Source="{Binding Icon}"
+        HeightRequest="45" />
+    <Label
+        Grid.Column="1"
+        Text="{Binding Text}"
+        FontAttributes="Italic"
+        VerticalTextAlignment="Center" />
+
+</Grid>
