Styles System => Stable Android Add Shell.TitleView in Interfaces, FlyoutIcon changed and implement themes Light and Dark.
Remarks:
When you go back the app generates an error, it did not happen when you had no theme changes, a custom Flyout icon was added and Shell.TitleView was added with a custom Font.

--- a/XF_FoodApp/XF_FoodApp/Styles/Icons.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Icons.xaml
@@ -108,6 +108,11 @@
     <!--  FontImageSource FLYOUT  -->
     <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
     <FontImageSource
+        x:Key="icon_fly_main"
+        FontFamily="{StaticResource MaterialIconFont}"
+        Glyph="{x:Static FontAwesome:IconFont.FormatListBulletedSquare}" />
+
+    <FontImageSource
         x:Key="icon_fly_home"
         FontFamily="{StaticResource MaterialIconFont}"
         Glyph="{x:Static FontAwesome:IconFont.Home}" />
