--- a/XF_FoodApp/XF_FoodApp/AppShell.xaml
+++ b/XF_FoodApp/XF_FoodApp/AppShell.xaml
@@ -7,29 +7,43 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ShellTemplate="clr-namespace:XF_FoodApp.Views.ShellTemplates"
     xmlns:view="clr-namespace:XF_FoodApp.Views"
+    xmlns:FontAwesome="clr-namespace:XF_FoodApp.Styles;assembly=XF_FoodApp"
     Title="XF_FoodApp"
     FlyoutBackgroundImage="img_bgflyout.png"
     FlyoutBackgroundImageAspect="AspectFill"
+    FlyoutIcon="{StaticResource icon_fly_main}"
     FlyoutBehavior="Flyout"
     FlyoutHeaderTemplate="{DataTemplate ShellTemplate:FlyoutHeaderTemplate}"
-    FlyoutHeaderBehavior="Fixed"
+    FlyoutHeaderBehavior="Scroll"
     ItemTemplate="{DataTemplate ShellTemplate:FlyoutItemTemplate}"
     MenuItemTemplate="{DataTemplate ShellTemplate:FlyoutMenuItemTemplate}"
     Visual="Material"
     mc:Ignorable="d">
 
 
+    <!--  CHANGED FLYOUT ICON  -->
+    <!--  +++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--<Shell.FlyoutIcon>
+        <FontImageSource
+            FontFamily="{StaticResource MaterialIconFont}"
+            Glyph="{x:Static FontAwesome:IconFont.FormatListBulletedSquare}"
+            Size="28"
+            Color="White" />
+    </Shell.FlyoutIcon>-->
+    <!--  +++++++++++++++++++++++++++++++++++++++++++++  -->
+
+
     <!--  SHELL RESOURCES  -->
     <!--  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
     <Shell.Resources>
-        <Color x:Key="NavigationPrimary">#FEFEFE</Color>
+        <Color x:Key="NavigationPrimary">#FF9A196B</Color>
         <Style
             x:Key="BaseStyle"
             TargetType="Element">
-            <Setter Property="Shell.BackgroundColor" Value="{DynamicResource colPrim}" />
+            <Setter Property="Shell.BackgroundColor" Value="{StaticResource NavigationPrimary}" />
             <Setter Property="Shell.TitleColor" Value="#FFFFFF" />
-            <Setter Property="Shell.TabBarBackgroundColor" Value="White" />
-            <Setter Property="Shell.TabBarUnselectedColor" Value="#FF96969A" />
+            <Setter Property="Shell.TabBarBackgroundColor" Value="{DynamicResource colTabBarBack}" />
+            <Setter Property="Shell.TabBarUnselectedColor" Value="{DynamicResource colTabBarUns}" />
             <Setter Property="Shell.TabBarTitleColor" Value="{DynamicResource colPrim}" />
         </Style>
 
