--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/DarkTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/DarkTheme.xaml
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
-<?xaml-comp compile="true" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ResourceDictionary
+    x:Class="XF_FoodApp.Styles.Themes.DarkTheme"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
@@ -12,16 +12,23 @@
     <Color x:Key="colAccError">#FFF9E7EB</Color>
     <Color x:Key="colAccUns">#FFF2F3F5</Color>
     <Color x:Key="colAltQua">#FFE3E7EF</Color>
-    <Color x:Key="colBG1">#FFF5F8FB</Color>
+    <Color x:Key="colBG2">#FF121212</Color>
     <Color x:Key="colBorCheck">#FF10CA87</Color>
     <Color x:Key="colBorError">#FFCA1030</Color>
-    <Color x:Key="colPrim">#FF9A196B</Color>
     <Color x:Key="colQua">#FFFFFFFF</Color>
-    <Color x:Key="colQui">#FF000000</Color>
     <Color x:Key="colRemPrim">#FFF93963</Color>
     <Color x:Key="colRemSec">#FFD4145C</Color>
-    <Color x:Key="colSec">#FF26315F</Color>
-    <Color x:Key="colTer">#FF56565A</Color>
     <Color x:Key="colUnsPrim">#FFC7CAD1</Color>
+
+    <Color x:Key="colBG1">#FF121212</Color>
+    <Color x:Key="colSurf1">#FF121212</Color>
+    <Color x:Key="colSurf2">#FF1D1D1D</Color>
+    <Color x:Key="colPrim">#FFF871C7</Color>
+    <Color x:Key="colQui">#FFFFFFFF</Color>
+    <Color x:Key="colSec">#FF8199FF</Color>
+    <Color x:Key="colTer">#FFC5C5C5</Color>
+
+    <Color x:Key="colTabBarUns">#FFC5C5C5</Color>
+    <Color x:Key="colTabBarBack">#FF121212</Color>
 
 </ResourceDictionary>
