--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
-<?xaml-comp compile="true" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ResourceDictionary
+    x:Class="XF_FoodApp.Styles.Themes.WhiteTheme"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
@@ -12,7 +12,7 @@
     <Color x:Key="colAccError">#FFF9E7EB</Color>
     <Color x:Key="colAccUns">#FFF2F3F5</Color>
     <Color x:Key="colAltQua">#FFE3E7EF</Color>
-    <Color x:Key="colBG1">#FFF5F8FB</Color>
+    <Color x:Key="colBG2">#FFF5F8FB</Color>
     <Color x:Key="colBorCheck">#FF10CA87</Color>
     <Color x:Key="colBorError">#FFCA1030</Color>
     <Color x:Key="colPrim">#FF9A196B</Color>
@@ -22,6 +22,13 @@
     <Color x:Key="colRemSec">#FFD4145C</Color>
     <Color x:Key="colSec">#FF26315F</Color>
     <Color x:Key="colTer">#FF56565A</Color>
+    <Color x:Key="colBG1">#FFFFFFFF</Color>
+    <Color x:Key="colSurf1">#FFFFFFFF</Color>
+    <Color x:Key="colSurf2">#FFFFFFFF</Color>
     <Color x:Key="colUnsPrim">#FFC7CAD1</Color>
+
+
+    <Color x:Key="colTabBarUns">#FF96969A</Color>
+    <Color x:Key="colTabBarBack">#FFFFFFFF</Color>
 
 </ResourceDictionary>
