--- a/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
@@ -6,17 +6,30 @@
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:XF_FoodApp.ViewModels"
-    mc:Ignorable="d"
-    Title="Explore restaurants">
+    mc:Ignorable="d">
 
     <ContentPage.BindingContext>
         <vm:MainViewModel />
     </ContentPage.BindingContext>
 
+    <Shell.TitleView>
+        <StackLayout Orientation="Horizontal"
+                     Padding="0,0,10,0">
+            <Label
+                Text="Explore restaurants"
+                Style="{StaticResource TxtH6Flyout_1}"
+                VerticalOptions="CenterAndExpand" />
+            <Switch
+                Toggled="Switch_Toggled"
+                OnColor="Black"
+                HorizontalOptions="EndAndExpand"
+                VerticalOptions="CenterAndExpand" />
+        </StackLayout>
+    </Shell.TitleView>
 
     <ContentPage.Content>
         <Grid>
-            <BoxView BackgroundColor="{StaticResource colQua}" />
+            <BoxView BackgroundColor="{DynamicResource colBG1}" />
             <ScrollView>
                 <Grid
                     Style="{StaticResource GridIdealPSpace}"
@@ -29,11 +42,12 @@
 
                     <StackLayout
                         Grid.Row="0"
-                        Spacing="15"
-                        Margin="0,32,0,0">
+                        Margin="0,32,0,0"
+                        Spacing="15">
+
                         <Label
                             Text="Discovery new places"
-                            Style="{DynamicResource TxtHeadline4_2}" />
+                            Style="{StaticResource TxtHeadline4_2}" />
 
                         <CollectionView
                             ItemsSource="{Binding ListRestaurant}"
@@ -51,7 +65,7 @@
                                         <Frame
                                             CornerRadius="6"
                                             WidthRequest="208"
-                                            BackgroundColor="{StaticResource colQua}"
+                                            BackgroundColor="{DynamicResource colSurf1}"
                                             Visual="Material"
                                             HasShadow="False">
                                             <StackLayout Spacing="6">
@@ -94,7 +108,7 @@
 
                                                     <Frame
                                                         Margin="0,-4,0,0"
-                                                        BackgroundColor="{StaticResource colPrim}"
+                                                        BackgroundColor="{DynamicResource colPrim}"
                                                         HasShadow="False"
                                                         CornerRadius="10"
                                                         Visual="Material"
@@ -128,12 +142,12 @@
                             Orientation="Horizontal">
                             <Label
                                 Text="Top categories"
-                                Style="{DynamicResource TxtHeadline6_1}"
+                                Style="{StaticResource TxtHeadline6_1}"
                                 HorizontalOptions="Start"
                                 VerticalOptions="Center" />
                             <Label
                                 Text="Show all"
-                                Style="{DynamicResource TxtSubTit1_1}"
+                                Style="{StaticResource TxtSubTit1_1}"
                                 HorizontalOptions="EndAndExpand"
                                 VerticalOptions="Center" />
                         </StackLayout>
@@ -147,16 +161,18 @@
                             </CollectionView.ItemsLayout>
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
-                                    <Frame Padding="7.5"
-                                           HasShadow="False"
-                                           Visual="Material">
+                                    <Frame
+                                        Padding="7.5"
+                                        HasShadow="False"
+                                        Visual="Material"
+                                        BackgroundColor="{DynamicResource colBG1}">
                                         <StackLayout Spacing="4">
                                             <Frame
                                                 Margin="0,0,0,4"
                                                 WidthRequest="88"
                                                 HeightRequest="88"
                                                 Visual="Material"
-                                                BackgroundColor="{StaticResource colQua}">
+                                                BackgroundColor="{DynamicResource colSurf2}">
                                                 <Label
                                                     Text="{Binding Image_Category}"
                                                     FontFamily="{StaticResource CustomIconFont}"
